--- a/wasm/index.html
+++ b/wasm/index.html
@@ -1,6 +1,40 @@
 <!doctype html>
 <html lang="en">
 
+<head>
+  <meta charset="UTF-8" />
+  <style>
+    body {
+      margin: 0;
+      background: linear-gradient(-45deg, #a6a6a6, #5ac05a, #262626, #a6a6a6);
+      background-size: 400% 400%;
+      animation: gradient 15s ease infinite;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    canvas {
+      background-color: white;
+    }
+
+    @keyframes gradient {
+      0% {
+        background-position: 0% 50%;
+      }
+
+      50% {
+        background-position: 100% 50%;
+      }
+
+      100% {
+        background-position: 0% 50%;
+      }
+    }
+  </style>
+</head>
+
 <body style="margin: 0px;">
   <script type="module">
     import './restart-audio-context.js'
